polished members sidebar

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1416,9 +1416,26 @@ body {
 
     .overlay {
       border: 0.2em solid #0ff;
-      width: calc(100% - 0.5em);
+      width: calc(100% - 0.4em);
       top: -0.2em;
     }
+  }
+
+  .action {
+    border-color: #333;
+    background-color: #111;
+    color: white;
+  }
+
+  & > .action {
+    position: absolute;
+    top: 0.5em;
+    right: 0.25em;
+  }
+
+  .addMember {
+    margin-top: 0.5em;
+    display: inline-block;
   }
 }
 
@@ -1992,12 +2009,27 @@ img.icon {
 
 // action button inside a toolbar, currently only used on .mission-style card
 .toolbar {
+  margin-top: 0.5em;
   margin-bottom: 0.5em;
 
-  .action {
+  &:last-child {
+    margin-right: 0;
+  }
+
+  & > .action {
     display: inline-block;
-    margin-right: 0.5em;
-    padding: 0.25em 0.75em;
+    margin-right: 0.1em;
+    padding: 0.25em 0.5em;
+    border-color: #333;
+    background-color: #111;
+    color: white;
+    font-size: 0.85em;
+
+    &.selected {
+      border-color: white;
+      border-width: 0.2em;
+      background-color: #222;
+    }
   }
 }
 
@@ -2177,6 +2209,11 @@ img.icon {
 
 #membersList {
   max-height: 55vh;
+
+  & > div:first-child {
+    margin-top: 0.5em;
+    margin-bottom: 1em;
+  }
 }
 
 // card compose box
