--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -908,7 +908,8 @@ body {
       top: 50%;
       left: 50%;
       transform: translateX(-50%) translateY(-50%);
-      background-color: rgba(0, 0, 0, 0.01);
+      // background-color: rgba(0, 0, 0, 0.01);
+      background-color: white;
     }
   }
 }
