CSS has lacunae

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1609,6 +1609,8 @@ body {
 
 // deck sidebar
 #leftSidebar.deck {
+  overflow-y: hidden;
+
   .toolbar.bumpUp {
     position: relative;
     top: -0.5em;
