--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -3088,6 +3088,8 @@ pre {
 
 // about section on the login page
 #login {
+  margin-top: 5em;
+
   & > .about {
     width: 90vw;
     position: relative;
