--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1672,6 +1672,7 @@ body {
     rgba(0, 0, 0, 0) 100%
   );
   padding: 20%;
+  pointer-events: none;
 
   .drawSources {
     display: flex;
@@ -1683,6 +1684,7 @@ body {
     margin-top: 4em;
     width: max-content;
     font-weight: bold;
+    pointer-events: auto;
 
     & > .drawSource {
       img {
@@ -1715,6 +1717,7 @@ body {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+    pointer-events: auto;
 
     & > img {
       width: 13em;
@@ -3934,6 +3937,73 @@ textarea {
 // Make card almost flush with top edge of parent card when no guild title
 .card.mini .hud.after .noGuild .dragZone {
   top: 0.25em;
+}
+
+// Giftbox icon on member card in members list that shows a count of gifts for that member
+.giftReminder {
+	position: absolute;
+	bottom: 0;
+	right: 2.5em;
+	cursor: pointer;
+	
+	&.disabled  {
+		cursor: default;
+		
+		img {
+			opacity: 0.4;
+		}
+		
+		span {
+			color: violet;
+			opacity: 0.8;
+		}
+	}
+	
+	img {
+		width: 2em;
+		opacity: 0.6;
+	}
+	
+	span {
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translateX(-50%) translateY(-50%);
+		font-weight: bold;
+		color: white;
+		text-shadow: -0.1em 0.1em 0.2em #000;
+		pointer-events: none;
+	}
+}
+
+@keyframes fadein2 {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+#minimap {
+	position: fixed;
+	left: 50%;
+	transform: translateX(-50%);
+	top: -28%;
+	//animation-name: fadein2;
+	//animation-iteration-count: 1;
+	//animation-timing-function: ease-in;
+	//animation-duration: 2s;
+	opacity: 1;
+	pointer-events: none;
+	//opacity: 0;
+	//transition: opacity 1s;
+}
+
+// Dot for deck data visualization
+svg.dataVisCanvas {
+	filter: brightness(1);
+	pointer-events: none;
 }
 
 // Future Update: procedurally map through the css/themes folder and map all filenames found there into an array
