--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2851,7 +2851,7 @@ img.ascend {
 
 // palette: color selector component
 .palette {
-  width: 100%;
+  width: max-content;
 
   .swatch {
     background: grey;
@@ -3372,22 +3372,12 @@ pre {
   position: absolute;
   left: 0.5em;
   top: 5em;
+  min-width: 14em;
 
-  .popupPanel {
-    // max-width: 42vw;
-    width: max-content;
-    max-height: 96vh;
-    min-width: 25em;
-    height: max-content;
-    min-height: 16em;
-
-    .stack {
-      // max-height: 44vh;
-      // overflow-y: auto;
-      min-width: 24em;
-    }
+  .stack > .dragZone > .card {
+    margin-left: 0;  
   }
-
+  
   p {
     margin-top: 4em;
     max-width: 25em;
@@ -4190,8 +4180,9 @@ div.legendAction, legend.clickable {
 // Tabs along the edge of a card
 .cardTabs {
   position: absolute;
-  right: 0;
   top: 3em;
+  right: 0;
+  height: calc(100% - 3em);
   
   .cardTab {
     background-color: rgba(100, 127, 208, 0.72);
@@ -4268,7 +4259,7 @@ div.legendAction, legend.clickable {
   //font-size: 1.5em;
   padding: 0 1em 1em 2.5em;
   animation: slideIn 0.35s forwards;
-  
+  color: white;  
 
   &.slideOut {
     animation: slideOut 0.65s forwards;
@@ -4288,6 +4279,11 @@ div.legendAction, legend.clickable {
   
   &.lightning {
     width: max-content;
+  }
+  
+  &.menu {
+    top: unset;
+    bottom: 0.5em;
   }
 }
 
@@ -4411,6 +4407,47 @@ div.legendAction, legend.clickable {
     top: 0.5em;
     pointer-events: none;
   }
+}
+
+// Flexible horizontal tabs that will try to stay on one line but wrap if necessary
+.flexTabs {
+  display: flex;
+  justify-content: center;
+  
+  .action {
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+  }
+}
+
+// The card menu tab button itself
+.cardTab.menuTabButton {
+  position: absolute;
+  bottom: 0.5em;
+  right: 0;
+}
+
+// Prevent wrapping
+.oneLineSetting {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  
+  .action {
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+  }
+}
+
+.action.minus, .action.plus {
+  font-size: 1.25em;
+  font-weight: bold;
+  height: 2em;
+  padding: 0 0.75em;
+  display: flex;
+  align-items: center;
+  
 }
 
 // Future Update: procedurally map through the css/themes folder and map all filenames found there into an array
